Fix extra space taken by Hero text container

--- a/client/styles/Header.module.css
+++ b/client/styles/Header.module.css
@@ -22,7 +22,7 @@
     color: var(--textColor);
     margin: 3rem;
     font-size: 1.4rem;
-    min-width: 74vw;
+    min-width: auto;
 }
 
 .herotextBigfont {
